trunk/Archive2/4e/0435094df00f5e/main.cpp
#include <valarray>
#include <vector>

int main() {
    using namespace std;
    vector<int> v{2,0,1,0,0,1,1,0,0,0}; // Any vector
    valarray<int> va(std::begin(v), std::end(v));
}